--- a/IfFoundLockScreen/packages.config
+++ b/IfFoundLockScreen/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MetroGridHelper" version="1.11" />
+  <package id="ScreenShots.cs" version="1.0" />
   <package id="SilverlightToolkitWP" version="4.2011.12.13" />
   <package id="YLAD" version="1.3" />
 </packages>
