--- a/IfFoundLockScreen/IfFoundLockScreen.csproj
+++ b/IfFoundLockScreen/IfFoundLockScreen.csproj
@@ -125,6 +125,9 @@
     <Content Include="ApplicationIcon173x173.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\appbar.transport.ff.rest.png" />
+    <Content Include="Images\appbar.transport.pause.rest.png" />
+    <Content Include="Images\appbar.transport.rew.rest.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Delete.png" />
